Fix position of first section on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@
 
 body {
   margin: 0;
-  padding: 0;
+  padding: 80px 0 0;
   font-size: 1rem;
   line-height: 1.7;
   color: #606d6e;
